# manhattan-project

./: docker-compose.yml
api/: .env  .env.example  Dockerfile  Makefile  main.py  output.json  pyproject.toml  settings.py
api/config/: agents.yaml  tasks.yaml
api/prompts/: brands_faces.txt  describe_product.txt  products_faces.txt  products_price.txt  quantifier.txt  quantifier_v2.txt  santher_fraldas.txt
api/src/: dependencies.py
api/src/crews/: products_analyzer_crew.py
api/src/db/: db.py  models.py
api/src/flows/: shelf_analyser.py
api/src/handlers/: execution.py  executions.py  industry.py
api/src/schemas/: common.py  execution.py
api/src/services/: execution.py  industry.py
api/src/utils/: ai.py  image.py  llm.py  promo.py  promo_api.py
web/: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
web/src/: index.html  styles.scss
web/src/app/: app.component.scss  app.component.ts  app.module.ts
web/src/app/_fake/: users.table.ts
web/src/app/_metronic/layout/: layout.component.html  layout.module.ts
web/src/app/_metronic/partials/: index.ts
web/src/app/architecture/date-formetter/: custom-date-parser-formatter.ts
web/src/app/architecture/interceptors/: loader-interceptor.ts  refresh-token-interceptor.ts
web/src/app/model/: base-model.ts  model-import.ts  model.ts  sheet-manager.ts  user-status.ts  user.ts
web/src/app/pages/: routing.ts
web/src/app/services/: executions.service.ts  user.service.ts
web/src/assets/: mock.js
web/src/environments/: environment.prod.ts  environment.ts
(+164 files in other folders)
